<resources>
    <string name="app_name">World Of Electronics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="email">email</string>
    <string name="fullname">fullname</string>
    <string name="loginhere">Already have an account?<u>login</u></string>
    <string name="password">password</string>
    <string name="signuphere">Create an account?<u>signup</u></string>
    <string name="Login">Login</string>
    <string name="username">username</string>
    <string name="Signup">Signup</string>
</resources>