<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="68dp"
        android:fontFamily="@font/aladin"
        android:gravity="center"
        android:text="@string/Signup"
        android:textColor=" #E8F80B"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="0.516" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        tools:ignore="MissingConstraints">

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="421dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_outline_verified_user_24"
        android:drawableRight="@drawable/ic_outline_verified_user_24"
        android:fontFamily="@font/aladin"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColorHighlight="#039C2B"
        android:textColorHint=" #3CFFA2"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_baseline_lock_open_24"
        android:drawableRight="@drawable/ic_baseline_lock_open_24"
        android:fontFamily="@font/aladin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHighlight="#039C2B"
        android:textColorHint=" #3CFFA2"
        app:layout_constraintBottom_toTopOf="@+id/btnsignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawableEnd="@drawable/ic_outline_mail_24"
        android:drawableRight="@drawable/ic_outline_mail_24"
        android:fontFamily="@font/aladin"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColorHighlight="#039C2B"
        android:textColorHint=" #3CFFA2"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_outline_insert_comment_24"
        android:drawableRight="@drawable/ic_outline_insert_comment_24"
        android:fontFamily="@font/aladin"
        android:hint="@string/fullname"
        android:padding="20dp"
        android:textColorHighlight="#039C2B"
        android:textColorHint="#3CFFA2"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnsignup"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/signup"
        android:fontFamily="@font/aladin"
        app:layout_constraintBottom_toTopOf="@+id/logintext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/aladin"
        android:text="@string/loginhere"
        android:textColor=" #3CFFA2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"

        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:ignore="MissingConstraints"/>


</androidx.constraintlayout.widget.ConstraintLayout>