<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="68dp"
        android:fontFamily="@font/aladin"
        android:gravity="center"
        android:text="@string/Login"

        android:textColor="#E8F80B"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        tools:ignore="MissingConstraints">

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        tools:ignore="MissingConstraints">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="192dp"
        android:layout_marginRight="30dp"
        android:drawableEnd="@drawable/ic_outline_verified_user_24"
        android:drawableRight="@drawable/ic_outline_verified_user_24"
        android:fontFamily="@font/aladin"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColorHighlight="#039C2B"
        android:textColorHint="#3CFFA2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="30dp"
        android:drawableEnd="@drawable/ic_baseline_lock_open_24"
        android:drawableRight="@drawable/ic_baseline_lock_open_24"
        android:fontFamily="@font/aladin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#3CFFA2"
        android:textColorLink="#039C2B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/btnlogin"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/aladin"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textColorLink="#0040C1"
        android:textCursorDrawable="@android:drawable/checkbox_on_background"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText3" />

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="auto"
        android:fontFamily="@font/aladin"
        android:text="@string/signuphere"
        android:textColor=" #3CFFA2"
        android:textColorHint="#181F42"
        android:textColorLink="#181F42"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        tools:ignore="TextContrastCheck" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText3"/>


</androidx.constraintlayout.widget.ConstraintLayout>